# thieam_snake

./: .gitignore  CMakeLists.txt  README.md  thiem_snake.code-workspace
.github/ISSUE_TEMPLATE/: feature_request.md
include/: agent.h  gameinfo.h
include/agents/: robin.h
include/ai/: eval.h  search.h  state.h  state_of_mind.h
include/interface/: cli_controller.h
include/interface/rest/: AppComponent.h  controller.h
include/interface/rest/dtos/: battlesnake.h  board.h  game.h  gameinfo.h  move.h  position.h  ruleset.h  ruleset_settings.h  snake_info.h
include/utils/: generator.h
src/: main.cpp
src/agents/: robin.cpp
src/ai/: eval.cpp  state_of_mind.cpp
src/interface/: cli_controller.cpp
tests/: CMakeLists.txt  eval.cpp  scenarios.cpp  search.cpp
tests/utils/: generator.cpp
